# curlpyconvert

./: .gitignore  .pre-commit-config.yaml  README.md  curl_example  pyproject.toml  readme.rst
.pre-commit-hooks/: increment_version.py
src/curlpyconvert/: __init__.py  main.py
src/curlpyconvert/lib/: context.py  curl_parser.py  dogman.py  grab.py
src/curlpyconvert/test/: test_context.py  test_curl_parser.py  test_dogman.py  test_grab.py  test_main.py
